<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".boasvindas">

    <TextView
        android:id="@+id/text_boasvindas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_boasvindas"
        android:layout_marginTop="40dp"
        android:textSize="50sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/btn_login"
        style="@style/edit_button"
        android:text="@string/text_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_boasvindas"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/btn_cadastro"
        style="@style/edit_button"
        android:text="@string/text_cadastro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_login"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/btn_sobre"
        style="@style/edit_button"
        android:text="@string/text_sobre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_cadastro"
        android:layout_marginTop="10dp"/>

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_sobre"
        />

</androidx.constraintlayout.widget.ConstraintLayout>