<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".sobre">

    <ImageView
        android:id="@+id/bmw"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/bmw"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        />

    <TextView
        android:id="@+id/autor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:text="@string/text_autor"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bmw" />

    <Button
        android:id="@+id/btn_ftec"
        style="@style/edit_button"
        android:text="@string/text_ftec"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/autor"
        android:layout_marginTop="50dp"/>

    <Button
        android:id="@+id/btn_voltar"
        style="@style/edit_button"
        android:text="@string/text_tela_inicial"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_ftec"
        android:layout_marginTop="50dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>